# axum-demo

./: Cargo.toml  README.md
src/: config.example.yaml  error.rs  lib.rs  main.rs  setting.rs
src/client/: kafka.rs
src/middleware/: jwt.rs
src/model/: mod.rs  user.rs
src/route/: client.rs  health.rs  idl.rs  kafka_consumer.rs  login.rs  mod.rs  produce_message.rs  put_get_redis.rs  register.rs  user.rs
