[package]
name = "axum-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
axum-extra = { version = "*", features = ["typed-header"] }
bcrypt = "0.13.0"
chrono = { version = "0.4.22", features = ["serde"] }
dotenvy = "0.15.5"
dotenvy_macro = "0.15.1"
eyre = "0.6.8"
jsonwebtoken = "8.1.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
serde_yaml = "*"
serde_with = "2.0.1"
tokio = { version = "1.21.2", features = ["full"] }
hyper = "1.0.0"
http-body-util = "*"
once_cell = "1.8"
reqwest = "0.11.24"
sqlx = "0.7"
sea-orm = { version = "0.12", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros", "with-chrono"] }