[package]
name = "axum-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
axum-extra = { version = "*", features = ["typed-header"] }
chrono = { version = "0.4.22", features = ["serde"] }
jsonwebtoken = "9.2.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
serde_yaml = "*"
tokio = { version = "1.21.2", features = ["full"] }
hyper = "1.0.0"
once_cell = "1.8"
reqwest = "0.11.24"
sqlx = "0.7"
sea-orm = { version = "0.12", features = [
    "sqlx-mysql",
    "runtime-tokio-native-tls",
    "macros",
    "with-chrono",
] }
uuid = { version = "1.7.0", features = ["v4"] }
rdkafka = { version = "0.36.2"}